styles/propertyDetails.module.css
.container {
  position: relative;
  top: 6rem;
  display: grid;
  grid-template-columns:
    minmax(0, 7fr)
    minmax(0, 3fr);
  column-gap: 2rem;
  font-size: 1.6rem;
  color: #707079;
  padding: 2rem;
  margin-bottom: 10rem;
}
.container h4,
.container h5 {
  color: #333;
}
.container h4 {
  font-size: 2rem;
}
.details {
  background-color: #fff;
  text-transform: capitalize;
}
.large_img {
  height: 40rem;
  background-size: cover;
  background-position: center;
}
.small_img {
  height: 10rem;
  cursor: pointer;
  background-size: cover;
  background-position: center;
}
.description {
  padding: 1rem;
}
.table {
  border: 1px solid #ebebeb;
}
.table_title {
  height: 5rem;
  background-color: #f2f4f5;
  border: 1px solid #ebebeb;
  display: flex;
  align-items: center;
}
.table_title h5 {
  background-color: rgba(1, 2, 78, 0.76);
  height: 5rem;
  width: max-content;
  display: flex;
  align-items: center;
  padding: 0% 1rem;
  color: #f2f4f5;
  font-size: 1.6rem;
  font-weight: 400;
}
.table_body {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}
.table_body div {
  display: grid;
  grid-template-columns: max-content 1fr;
  column-gap: 2rem;
  align-items: center;
  margin-left: 2rem;
  border-bottom: 1px solid #ebebeb;
}

.table_body p:last-child {
  color: #333;
  font-weight: 500;
}
.contact {
  border: 1px solid #ebebeb;
  background-color: #f2f4f5;
  padding-bottom: 2rem;
  position: sticky;
  top: 5rem;
}
.contact_header {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.phone,
.email {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.phone div,
.email div {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 15vw;
}
.contact_header h4 {
  margin: 0%;
}
.input {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.input input {
  height: 4rem;
  width: 20vw;
  border: 1px solid #ebebeb;
  margin-bottom: 1rem;
  padding-left: 1rem;
}
.input button {
  background-color: rgba(1, 2, 78, 0.76);
  color: #f2f4f5;
  border: none;
  height: 4rem;
  width: 20vw;
  cursor: pointer;
}

@media only screen and (max-width: 1000px) {
  .container {
    grid-template-columns: minmax(0, 1fr);
  }
  .table {
    margin-bottom: 5rem;
  }
  .phone div,
  .email div {
    width: 15rem;
  }
  .input input,
  .input button {
    width: 70vw;
  }
}
@media only screen and (max-width: 600px) {
  .table_body {
    grid-template-columns: 1fr;
  }
}
@media only screen and (max-width: 400px) {
  .large_img {
    height: 20rem;
  }
  .small_img {
    height: 5rem;
  }
}

